changement des bolders

--- a/newsletterOfficiel.html
+++ b/newsletterOfficiel.html
@@ -325,13 +325,13 @@
         <!--section films-->
         <tr>
             <h2
-                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140; text-shadow: 2px 2px 3px black">
+                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140;">
                 Les derniers films à l'affiche</h2>
 
         </tr>
         <tr>
             <td><a href="#"><img src="https://i.goopics.net/WD0ee.jpg"
-                        style=" margin-top: 0px; margin-bottom: 0px; padding-top: 2px; width:145px; height:220px; text-align:center; color:white;" /></a>
+                        style=" margin-top: 0px; margin-bottom: 0px; padding-top: 2px; width:145px; height:220px; text-align:center;" /></a>
 
                 <a href="#"><img src="https://i.goopics.net/nQDbJ.jpg"
                         style=" margin-top: 0px; margin-bottom: 0px; width:145px; height:220px; text-align:center;" /></a>
@@ -350,22 +350,22 @@
             <tr>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"><strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"><strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"><strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2019</p>
+                    <p style="color:#737373; font-weight: bolder;"><strong>Nouveauté exclus 2019</strong></p>
 
                 </td>
             </tr>
@@ -404,16 +404,16 @@
         <tbody>
             <tr>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-size:15px;font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
+                    <p style="color:#737373;"><strong>Ajout Episode 16 Saison 9</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
+                    <p style="color:#737373;"><strong>Ajout Episode 12 Saison 16</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 15 Saison 3</p>
+                    <p style="color:#737373;"><strong>Ajout Episode 15 Saison 3</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 25 Saison 15</p>
+                    <p style="color:#737373; "><strong>Ajout Episode 25 Saison 15</strong></p>
                 </td>
             </tr>
         </tbody>
