--- a/index.html
+++ b/index.html
@@ -5,180 +5,231 @@
     <title>Allez Cine!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Css Link -->
     <link rel="stylesheet" media="screen" type="text/css" title="style" href="assets/css/style.css" />
+    <!-- Font Awesome Link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">    
+    <!--Bootstrap Link -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
 <body>
     <footer>
-        <div class="row">
-            <div class="col text-center">
-                <h2 class="suscribe">SUBSCRIBE TO US</h2>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center">
+                    <h2 class="suscribe">SUBSCRIBE TO US</h2>
+                </div>
             </div>
-        </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-3">
+            <div class="row d-flex justify-content-center inputsuscribe">
+                <div class="col-4">
+                    <div>
+                        <input type="email" class="form-control" id="formail" placeholder="Enter your email...">
+                    </div>
+                </div>
                 <div>
-                    <input type="email" class="form-control" id="formail" placeholder="Enter your email...">
-                </div>  
-            </div>
-            <div>
-                <button type="button" class="btn btn-danger">Subscribe</button>
-            </div>
-        </div>
-        <!-- Lisibilité  html-->
-        <div class=" tableau row">
-            <div class="col-2 offset-1">
-                <h4>RELEASES</h4>
-                <table class="table">
-                    <tr>
-                        <th><!-- White line--></th>
-                    </tr>
-                </table>
-                <table>
-                    <tr>
-                        <td><p><a class="releases" href="#">2019</a></p></td>
-                    </tr>
-                    <tr>
-                        <td><p><a class="releases" href="#">2018</a></p></td>
-                    </tr>
-                    <tr>
-                        <td><p><a class="releases" href="#">2017</a></p></td>
-                    </tr>
-                    <tr>
-                        <td><p><a class="releases" href="#">2016</a></p></td>
-                    </tr>
-                    <tr>
-                        <td><p><a class="releases" href="#">2015</a></p></td>
-                    </tr>
-                    <tr>
-                        <td><p><a class="releases" href="#">2014</a></p></td>
-                    </tr>
-                </table>
+                    <button type="button" class="btn btn-danger" data-toggle="confirmation">Subscribe</button>
+                </div>
             </div>
             <!-- Lisibilité  html-->
-            <div class="col-2">
-                <h4 class="titlef">MOVIES</h4>
-                <table class="table">
-                    <tr>
-                        <th><!-- White line--></th>
-                    </tr>
-                </table>
-                <table>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">ADVENTURE</a></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">COMEDY</a></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">FANTASY</a></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">ACTION</a></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">ANIMATION</a></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <p><a class="movies" href="#">HORROR</a></p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <!-- Lisibilité  html-->
-            <div class="col-2">
-                <h4 class="titlef">REVIEW MOVIES</h4>
-                <table class="table">
-                    <tr>
-                        <th><!-- White line--></th>
-                    </tr>
-                </table>
-                <a class="btag" href="#">Comedy</a> <a class="btag" href="#">Horror</a> <a class="btag"
-                    href="#">Historical</a> <a class="btag" href="#">Romantic</a> <a class="btag" href="#">Love</a> <a
-                    class="btag" href="#">Action</a> <a class="btag" href="#">Reviews</a> <a class="btag"
-                    href="#">Fantasy</a> <a class="btag" href="#">Thriller</a> <a class="btag" href="#">Animation</a> <a
-                    class="btag" href="#">Scifi</a> <a class="btag" href="#">Mecha</a> <a class="btag" href="#">Family</a> <a class="btag"
-                    href="#">War</a> <a class="btag" href="#">Drama</a>
-            </div>
-            <!-- Lisibilité  html-->
-            <div class="col-2">
-                <h4 class="titlef">LATEST MOVIE</h4>
-                <table class="table">
-                    <tr>
-                        <th><!-- White line--></th>
-                    </tr>
-                </table>
-                <table>
-                    <tr>
-                        <td>
-                            <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
-                        </td>
-                        <td>
-                            <p>Batman The Dark Knight</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img class="img1" src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
-                        </td>
-                        <td>
-                            <p>Là-Haut</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img class="img1" src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
-                        </td>
-                        <td>
-                            <p>L.O.T.H.R. - The King Return</p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
-                        </td>
-                        <td>
-                            <p>Batman The Dark Knight</p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <!-- Lisibilité  html-->
-            <div class="col-2">
-                <h4><span class="cine1"></span>ALLEZ <span class="cine2">CINE!</span></h4>
-                <table class="table">
-                    <tr>
-                        <th><!-- White line--></th>
-                    </tr>
-                </table>
-                <tr>
-                    <td><img class="img2" src="https://puu.sh/DHWg0/fdd48a35f3.jpg" /><img class="img2" src="https://puu.sh/DHWek/c2735e1623.jpg" /><img class="img2" src="https://puu.sh/DHVoB/260bd4b887.jpg" /></td>
-                    <td><img class="img2" src="https://puu.sh/DHWnl/6c90382cd6.jpg" /><img class="img2" src="https://puu.sh/DHWin/412d3a6aa7.jpg" /><img class="img2" src="https://puu.sh/DHWkk/245c1b33e2.jpg" /></td>
-                </tr>
-            </div>
-        </div>
-        <!-- Lisibilité  html-->
-        <hr class="hrespace">
-        <!-- Lisibilité  html-->
-        <div class="row">
-            <div class="col text-center">
-                <h2>SUBSCRIBE TO US</h2>
-            </div>
-        </div>
+            <div class=" tableau row">
+                <div class="col-2 offset-1">
+                    <h4>RELEASES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2019</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2018</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2017</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2016</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2015</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="releases" href="#">2014</a></p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-2">
+                    <h4 class="titlef">MOVIES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ADVENTURE</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">COMEDY</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">FANTASY</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ACTION</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ANIMATION</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">HORROR</a></p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-2">
+                    <h4 class="titlef">REVIEW MOVIES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <a class="btag" href="#">Comedy</a> <a class="btag" href="#">Horror</a> <a class="btag"
+                        href="#">Historical</a> <a class="btag" href="#">Romantic</a> <a class="btag" href="#">Love</a>
+                    <a class="btag" href="#">Action</a> <a class="btag" href="#">Reviews</a> <a class="btag"
+                        href="#">Fantasy</a> <a class="btag" href="#">Thriller</a> <a class="btag"
+                        href="#">Animation</a> <a class="btag" href="#">Scifi</a> <a class="btag" href="#">Mecha</a> <a
+                        class="btag" href="#">Family</a> <a class="btag" href="#">War</a> <a class="btag"
+                        href="#">Drama</a>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-2">
+                    <h4 class="titlef">LATEST MOVIE</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Batman The Dark Knight</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Up</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">L.O.T.H.R. - The King Return</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Batman The Dark Knight</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-2">
+                    <h4><span class="cine2">ALLEZ</span><span class="cine1">CINE!</span></h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td><img class="img2" src="https://puu.sh/DHWg0/fdd48a35f3.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWek/c2735e1623.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHVoB/260bd4b887.jpg" /></td>
+                        </tr>
+                        <tr>
+                            <td><img class="img2" src="https://puu.sh/DHWnl/6c90382cd6.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWin/412d3a6aa7.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWkk/245c1b33e2.jpg" /></td>
+                        </tr>
+                    </table>
 
+                </div>
+            </div>
+            <!-- Lisibilité  html-->
+            <hr class="hrespace">
+            <!-- Lisibilité  html-->
+            <div class="row">
+                <div class="col text-center">
+                    <h2 class="connectus">CONNECT US</h2>
+                </div>
+            </div>
+            <!-- Lisibilité  html-->
+            <div class="row">
+                <div class="col d-flex justify-content-center">
+                    <table>
+                        <tr>
+                            <td><span class="border border-white"><i class="fab fa-facebook-f"></i></span></td>
+                            <td><span class="border border-white"><i class="fab fa-twitter"></i></span></td>
+                            <td><span class="border border-white"><i class="fab fa-linkedin-in"></i></span></td>
+                            <td><span class="border border-white"><i class="fab fa-youtube"></i></span></td>
+                            <td><span class="border border-white"><i class="fab fa-google-plus-g"></i></span></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Optional JavaScript -->
