--- a/index.html
+++ b/index.html
@@ -218,15 +218,11 @@
             <!-- Lisibilité  html-->
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <table>
-                        <tr>
-                            <td><span class="border border-white"><i class="fab fa-facebook-f"></i></span></td>
+                            <td><span class=" spanm border border-white"><i class="fab fa-facebook-f"></i></span></td>
                             <td><span class="border border-white"><i class="fab fa-twitter"></i></span></td>
                             <td><span class="border border-white"><i class="fab fa-linkedin-in"></i></span></td>
                             <td><span class="border border-white"><i class="fab fa-youtube"></i></span></td>
                             <td><span class="border border-white"><i class="fab fa-google-plus-g"></i></span></td>
-                        </tr>
-                    </table>
                 </div>
             </div>
         </div>
