adaptation text-shadow pour les titres

--- a/newsletter.html
+++ b/newsletter.html
@@ -320,14 +320,13 @@
         <!--entête-->
         <tr><a href="#">
                 <h1
-                    style="background-image:url(https://i.goopics.net/anAY0.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px; text-align:center; color: #ff4140">
+                    style="background-image:url(https://i.goopics.net/anAY0.jpg); font-family:Arial; width:600px; height:100px; padding-top: 2%; margin-bottom: 5px;">
                 </h1>
         </tr></a>
         <!--section films-->
         <tr>
             <h2
-                style="background-image:url(https://i.goopics.net/x3RlE.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 1.8em;letter-spacing: 2px; color: #ff4140; text-shadow: 2px 2px 3px black">
-                Les derniers films à l'affiche</h2>
+                style="background-image:url(https://i.goopics.net/kjJJe.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 2em;letter-spacing: 2px; color: red;"></h2>
 
         </tr>
         <tr>
@@ -379,8 +378,7 @@
             <tr>
                 <td>
                     <h2
-                        style="background-image:url(https://i.goopics.net/DmeDZ.jpg);  font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 4%; text-align:center; color: #ff4140 ;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">
-                        Les épisodes de vos séries préférées</h2>
+                        style="background-image:url(https://i.goopics.net/ZY11l.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 4%; text-align:center; color: #ff4140 ;font-size: 1.8em;"></h2>
                 </td>
             </tr>
             <tr>
@@ -405,16 +403,16 @@
         <tbody>
             <tr>
                 <td style="text-align: center;"> 
-                    <p style="color:#737373; font-size:15px;font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
+                    <p style="color:#737373;"> Ajout Episode 16 Saison 9</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
+                    <p style="color:#737373;"> Ajout Episode 12 Saison 16</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 15 Saison 3</p>
+                    <p style="color:#737373;"> Ajout Episode 15 Saison 3</p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373; font-weight: bolder;"> Ajout Episode 25 Saison 15</p>
+                    <p style="color:#737373;"> Ajout Episode 25 Saison 15</p>
                 </td>
             </tr>
         </tbody>
@@ -426,7 +424,7 @@
             <td
                 style="background-image: url(https://i.goopics.net/rY41D.jpg); background-size: cover; font-family:Arial; width:600px; height:326px; margin:auto; text-align:center; color:white;">
                 <a href="#" style="text-decoration: none; color:white;">
-                    <p style="font-size: 1.7em; text-shadow: 3px 2px 1px black;">Tous les vendredis 3 films d'horreur à la suite !!!</p>
+                    <p style="font-size: 1.7em;">Tous les vendredis 3 films d'horreur à la suite !!!</p>
                 </a>
             </td>
 
@@ -434,12 +432,11 @@
         </tr>
     </table>
     <!--Les promo du passé-->
-    <table>
+    <table style="width: 100%;">
         <tr>
         <tr>
             <h2
-                style="background-image:url(https://i.goopics.net/koqwp.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em; ; text-shadow: 2px 2px 3px black">
-                Les promos du passé</h2>
+            style="background-image:url(https://i.goopics.net/rK2X0.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em;"></h2>
         </tr>
         </tr>
         <tr>
@@ -460,7 +457,7 @@
         <tbody>
             <tr>
                 <td style="padding-top:10px; padding-bottom:5px; text-align:center;">
-                    <span style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white;  text-shadow: 3px 2px 1px black;">
+                    <span style="font-family: Arial; font-size: 15px; letter-spacing: 1; color: white; ">
                         Rejoignez-nous sur : </span>
                 </td>
             </tr>
