--- a/newsletter.html
+++ b/newsletter.html
@@ -350,22 +350,22 @@
             <tr>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2018</p>
+                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2018</strong></p>
 
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> Nouveauté exclus 2019</p>
+                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2019</strong></p>
 
                 </td>
             </tr>
@@ -403,16 +403,16 @@
         <tbody>
             <tr>
                 <td style="text-align: center;"> 
-                    <p style="color:#737373;"> Ajout Episode 16 Saison 9</p>
+                    <p style="color:#737373;"> <strong>Ajout Episode 16 Saison 9</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373;"> Ajout Episode 12 Saison 16</p>
+                    <p style="color:#737373;"> <strong>Ajout Episode 12 Saison 16</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373;"> Ajout Episode 15 Saison 3</p>
+                    <p style="color:#737373;"> <strong>Ajout Episode 15 Saison 3</strong></p>
                 </td>
                 <td style="text-align: center;">
-                    <p style="color:#737373;"> Ajout Episode 25 Saison 15</p>
+                    <p style="color:#737373;"> <strong>Ajout Episode 25 Saison 15</strong></p>
                 </td>
             </tr>
         </tbody>
