--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" media="screen" type="text/css" title="style" href="assets/css/style.css"/>
-    <title>Titre</title>
+    <link rel="stylesheet" media="screen" type="text/css" title="style" href="assets/css/footer.css"/>
+    <title>Footer</title>
 </head>
 <body>
 
