--- a/index.html
+++ b/index.html
@@ -8,6 +8,218 @@
     <title>Footer</title>
 </head>
 <body>
+    <footer>
+        <!-- Content Section -->
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
 
+                </div>
+                <div class="col">
+
+                </div>
+
+                <div class="col">
+
+                </div>
+                <div class="col">
+
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+
+        </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col text-center">
+                    <h2 class="suscribe">SUBSCRIBE TO US</h2>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-center inputsuscribe">
+                <div class="col-4">
+                    <div>
+                        <input type="email" class="form-control" id="formail" placeholder="Enter your email...">
+                    </div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-danger" data-toggle="confirmation">Subscribe</button>
+                </div>
+            </div>
+            <!-- Lisibilité  html-->
+            <div class=" tableau row">
+                <div class="col col-md-4">
+                    <h4>RELEASES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+
+                    <p><a class="releases" href="#">2019</a></p>
+                    <p><a class="releases" href="#">2018</a></p>
+                    <p><a class="releases" href="#">2017</a></p>
+                    <p><a class="releases" href="#">2016</a></p>
+                    <p><a class="releases" href="#">2015</a></p>
+                    <p><a class="releases" href="#">2014</a></p>
+
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col col-md-4">
+                    <h4 class="titlef">MOVIES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ADVENTURE</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">COMEDY</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">FANTASY</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ACTION</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">ANIMATION</a></p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <p><a class="movies" href="#">HORROR</a></p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col col-md-4">
+                    <h4 class="titlef">REVIEW MOVIES</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <a class="btag" href="#">Comedy</a> <a class="btag" href="#">Horror</a> <a class="btag"
+                        href="#">Historical</a> <a class="btag" href="#">Romantic</a> <a class="btag" href="#">Love</a>
+                    <a class="btag" href="#">Action</a> <a class="btag" href="#">Reviews</a> <a class="btag"
+                        href="#">Fantasy</a> <a class="btag" href="#">Thriller</a> <a class="btag"
+                        href="#">Animation</a> <a class="btag" href="#">Scifi</a> <a class="btag" href="#">Mecha</a> <a
+                        class="btag" href="#">Family</a> <a class="btag" href="#">War</a> <a class="btag"
+                        href="#">Drama</a>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-sm-6 col">
+                    <h4 class="titlef">LATEST MOVIE</h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Batman The Dark Knight</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://puu.sh/DHzxq/7a71f5ca54.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Up</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://puu.sh/DHAz6/bd8e40c361.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">L.O.T.H.R. - The King Return</p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <img class="img1" src="https://i.goopics.net/pYVYd.jpg" />
+                            </td>
+                            <td>
+                                <p class="titlemov">Batman The Dark Knight</p>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <!-- Lisibilité  html-->
+                <div class="col-sm-6 col">
+                    <h4><span class="cine2">ALLEZ</span><span class="cine1">CINE!</span></h4>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                <!-- White line-->
+                            </th>
+                        </tr>
+                    </table>
+                    <table>
+                        <tr>
+                            <td><img class="img2" src="https://puu.sh/DHWg0/fdd48a35f3.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWek/c2735e1623.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHVoB/260bd4b887.jpg" /></td>
+                        </tr>
+                        <tr>
+                            <td><img class="img2" src="https://puu.sh/DHWnl/6c90382cd6.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWin/412d3a6aa7.jpg" /></td>
+                            <td><img class="img2" src="https://puu.sh/DHWkk/245c1b33e2.jpg" /></td>
+                        </tr>
+                    </table>
+
+                </div>
+            </div>
+            <!-- Lisibilité  html-->
+            <hr class="hrespace">
+            <!-- Lisibilité  html-->
+            <div class="row">
+                <div class="col text-center">
+                    <h2 class="connectus">CONNECT US</h2>
+                </div>
+                <div><a id="cRetour" class="cInvisible" href="#">haut</a></div>
+            </div>
+            <!-- Lisibilité  html-->
+            <div class="row">
+                <div class="col d-flex justify-content-center">
+                    <td> <img src="https://i.goopics.net/WDaQr.jpg" class="facebook"/> </td>
+                    <td> <img src="https://i.goopics.net/QljmV.jpg" class="twitter"/> </td>
+                    <td> <img src="https://i.goopics.net/1oPXo.jpg" class="youtube"/> </td>
+                    <td> <img src="https://i.goopics.net/loVmp.jpg" class="linkedin"/> </td>
+                    <td> <img src="https://i.goopics.net/b9pgK.jpg" class="google+"/> </td>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
