changement dans les tailles

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                 <div class="col text-center">
                     <h2 class="connectus">CONNECT US</h2>
                 </div>
-                <div><a id="cRetour" class="cInvisible" href="#">haut</a></div>
+                <div><a id="cRetour" class="cInvisible" href="#haut">haut</a></div>
             </div>
             <!-- Lisibilité  html-->
             <div class="row">
