--- a/index.html
+++ b/index.html
@@ -281,6 +281,53 @@
             </div>
         </section>
     </main>
+    <section class="container">
+        <h3 class="ligne title">CONTACT US</h3>
+        <div class="row">
+            <div class="col-6">
+                <div class="row">
+
+                </div>
+            </div>
+            <div class="col-6">
+
+            </div>
+        </div>
+    </section>
+    <!--Formulaire de contact-->
+    <form>
+        <div class="formulaire ">
+        <div class="form-row container-fluid">
+            <div class="form-group col-md-6">
+                <label for="firstname"></label>
+                <input type="text" class="form-control" id="firstname" placeholder="FIRST NAME">
+            </div>
+            <div class="form-group col-md-6 ">
+                <label for="lastname"></label>
+                <input type="text" class="form-control" id="lastname" placeholder="LAST NAME">
+            </div>
+        </div>
+        <div class="form-row container-fluid">
+            <div class="form-group col-md-6">
+                <label for="email"></label>
+                <input type="email" class="form-control" id="email" placeholder="EMAIL">
+            </div>
+            <div class="form-group col-md-6">
+                <label for="subject"></label>
+                <input type="text" class="form-control" id="subject" placeholder="SUBJECT">
+            </div>
+        </div>
+        <div class="form-group">
+                <label for="message"></label>
+                <textarea class="form-control" id="message" rows="3" cols="12" padding="20px" placeholder="YOUR MESSAGE"></textarea>
+              </div>
+    
+        
+        <button type="submit" class="btn btn-plus">SEND MESSAGE</button>
+    </form>
+</div>
+
+
 
     <footer>
         <!-- Content Section -->
@@ -486,11 +533,11 @@
             <!-- Lisibilité  html-->
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <td> <img src="https://i.goopics.net/WDaQr.jpg" class="facebook"/> </td>
-                    <td> <img src="https://i.goopics.net/QljmV.jpg" class="twitter"/> </td>
-                    <td> <img src="https://i.goopics.net/1oPXo.jpg" class="youtube"/> </td>
-                    <td> <img src="https://i.goopics.net/loVmp.jpg" class="linkedin"/> </td>
-                    <td> <img src="https://i.goopics.net/b9pgK.jpg" class="google+"/> </td>
+                    <td> <img src="https://i.goopics.net/WDaQr.jpg" class="facebook" /> </td>
+                    <td> <img src="https://i.goopics.net/QljmV.jpg" class="twitter" /> </td>
+                    <td> <img src="https://i.goopics.net/1oPXo.jpg" class="youtube" /> </td>
+                    <td> <img src="https://i.goopics.net/loVmp.jpg" class="linkedin" /> </td>
+                    <td> <img src="https://i.goopics.net/b9pgK.jpg" class="google+" /> </td>
                 </div>
             </div>
         </div>
