bouton "vers le haut" pas terminé

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                         href="#">Drama</a>
                 </div>
                 <!-- Lisibilité  html-->
-                <div class="col-sm-2 col">
+                <div class="col-sm-3 col">
                     <h4 class="titlef">LATEST MOVIE</h4>
                     <table class="table">
                         <tr>
@@ -480,17 +480,17 @@
             <div class="row">
                 <div class="col text-center">
                     <h2 class="connectus">CONNECT US</h2>
+                    <a href="#haut" id="cRetour" class="cInvisible">fléche</a>
                 </div>
-                <div><a id="cRetour" class="cInvisible" href="#haut">haut</a></div>
             </div>
             <!-- Lisibilité  html-->
             <div class="row">
                 <div class="col d-flex justify-content-center">
-                    <td> <img src="https://i.goopics.net/WDaQr.jpg" class="facebook"/> </td>
-                    <td> <img src="https://i.goopics.net/QljmV.jpg" class="twitter"/> </td>
-                    <td> <img src="https://i.goopics.net/1oPXo.jpg" class="youtube"/> </td>
-                    <td> <img src="https://i.goopics.net/loVmp.jpg" class="linkedin"/> </td>
-                    <td> <img src="https://i.goopics.net/b9pgK.jpg" class="google+"/> </td>
+                    <td> <img src="https://i.goopics.net/WDaQr.jpg" class="icon"/> </td>
+                    <td> <img src="https://i.goopics.net/QljmV.jpg" class="icon"/> </td>
+                    <td> <img src="https://i.goopics.net/1oPXo.jpg" class="icon"/> </td>
+                    <td> <img src="https://i.goopics.net/loVmp.jpg" class="icon"/> </td>
+                    <td> <img src="https://i.goopics.net/b9pgK.jpg" class="icon"/> </td>
                 </div>
             </div>
         </div>
