ajout section manquante

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
                 </div>
                 <button type="button" class="btn btn-plus">Plus de films</button>
             </div>
-
         </section>
+        <!--section Shop Movies-->
         <section class="container">
             <h3 class="ligne title">Shop Movies</h3>
             <div class="row">
@@ -306,6 +306,11 @@
 
                 </div>
             </div>
+        </section>
+        <!--fin section Shop Movies-->
+        <!--section Contact Us-->
+        <section class="container">
+            <h3 class="ligne title">Contact US</h3>
         </section>
     </main>
 
