section contact et série

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">...</div>
                     <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">...</div>
                 </div>
-                <button type="button" class="btn btn-plus">Plus de films</button>
+                <button type="button" class="btn btn-plus">Plus de séries</button>
             </div>
         </section>
         <!--section Shop Movies-->
