--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +13,7 @@
 
 <body>
 
-    <header>
+    <header id="haut">
         <nav class="navbar navbar-expand-lg navbar-light">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -480,8 +479,9 @@
             <div class="row">
                 <div class="col text-center">
                     <h2 class="connectus">CONNECT US</h2>
-                    <a href="#haut" id="cRetour" class="cInvisible">fléche</a>
+                    
                 </div>
+                <a href="#haut" id="cRetour" class="cInvisible"><img src="https://i.goopics.net/1W12A.png"></a>
             </div>
             <!-- Lisibilité  html-->
             <div class="row">
