Push du travail pendant la porte ouverte

--- a/index.html
+++ b/index.html
@@ -66,32 +66,41 @@
             
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item nav-block active">
                         <div class="dropdown">
                             <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <a href="#">Action</a>
+                                    <a href="#">Aventure</a>
+                                    <a href="#">Horreur</a>
+                                    <a href="#">Comédie</a>
                                 </div>
                             </div>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-block">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <button class="btn" id="movies" data-toggle="dropdown">Films</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <a href="#">Récents</a>
+                                    <a href="#">Ancient</a>
+                                    <a href="#">En tête d'affiche</a>
+                                    <a href="#">Box office</a>
                                 </div>
                             </div>
                         </div>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-block">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <button class="btn" id="genre" data-toggle="dropdown">Série</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <a href="#">Les plus récentes</a>
+                                    <a href="#">Les plus regardée</a>
+                                    <a href="#">Les plus aimé</a>
+                                    <a href="#">Les plus populaire</a>
                                 </div>
                             </div>
                         </div>
@@ -120,7 +129,7 @@
 
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                <img class="d-block w-100 opa" src="assets/img/carousel1.jpg" alt="First slide">
+                <img class="d-block w-100 opa" src="assets/img/header/carousel1.jpg" alt="First slide">
                     <div class="carousel-caption d-md-block">
                         <h2>LASTEST <span class="title-red">ON</span>LINE <span class="title-red">MO</span>VIE</h2>
                         <p>In space no one can hear you scream</p>
@@ -130,7 +139,7 @@
                 </div>
 
                 <div class="carousel-item">
-                <img class="d-block w-100 opa" src="assets/img/carousel2.jpg" alt="Second slide">
+                <img class="d-block w-100 opa" src="assets/img/header/carousel2.jpg" alt="Second slide">
                     <div class="carousel-caption d-md-block">
                         <h2>BEST <span class="title-red">MO</span>VIE <span class="title-red">OF</span> THE <span class="title-red">MO</span>MENT</h2>
                         <p>The end is part of the journey</p>
@@ -139,7 +148,7 @@
                 </div>
 
                 <div class="carousel-item">
-                <img class="d-block w-100 opa" src="assets/img/carousel3.jpg" alt="Third slide">
+                <img class="d-block w-100 opa" src="assets/img/header/carousel3.jpg" alt="Third slide">
                     <div class="carousel-caption d-md-block">
                         <h2>LASTEST <span class="title-red">ON</span>LINE <span class="title-red">SE</span>RIE</h2>
                         <p>May the era of "matriarchy" begin</p>
@@ -157,7 +166,7 @@
                 <span class="sr-only">Next</span>
             </a>
             <div class="connect d-flex">
-                <p><i class="fas fa-phone-alt"></i>(+000) 009 455 4088</p>
+                <p><i class="fas fa-phone-alt"></i>(+000) 009 455 40 88</p>
                 <button type="button" data-target="#register" data-toggle="modal" class="btn btn-black text-white">LOGIN</button>
                 <div class="modal fade" id="register" role="dialog" tabindex="2" aria-labelledby="registerLabel" aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" role="document">
