Modification du header et ajout d'un padding sur la nav et sur contact

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         </div>
                     </li>
                     <li>
-                        <a class="nav-link" href="#">CONTACT</a>
+                        <a class="nav-link nav-contact" href="#">CONTACT</a>
                     </li>
                 </ul>
 
