modification header et fichier HTML

--- a/index.html
+++ b/index.html
@@ -26,30 +26,46 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <button class="btn" id="genre" data-toggle="dropdown">Film</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <ul>
+                                        <li><a href="#">Action</a></li>
+                                        <li><a href="#">Comedy</a></li>
+                                        <li><a href="#">Western</a></li>
+                                        <li><a href="#">Fiction</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <button class="btn" id="genre" data-toggle="dropdown">Série TV</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <ul>
+                                        <li><a href="#">Drame</a></li>
+                                        <li><a href="#">Horreur</a></li>
+                                        <li><a href="#">Fiction</a></li>
+                                        <li><a href="#">Médical</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li class="nav-item">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre</button>
+                            <button class="btn" id="genre" data-toggle="dropdown">Shop Movies</button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
-                                    <a href="#">Fuck this shit</a>
+                                    <ul>
+                                        <li><a href="#">Animation</a></li>
+                                        <li><a href="#">Comedy</a></li>
+                                        <li><a href="#">Fiction</a></li>
+                                        <li><a href="#">Horreur</a></li>
+                                        
+                                    </ul>
                                 </div>
                             </div>
                         </div>
