Navbar reseaux HTML + Style2.css

--- a/navbarreseaux.html
+++ b/navbarreseaux.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="assets/css/style2.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
@@ -13,10 +14,10 @@
   <body>
       
     <div class="mySidenav sidenav">
-        <a href="#" class="tw">Twitter</a>
-        <a href="#" class="fb">Facebook</a>
-        <a href="#" class="dbbb">Dribbble</a>
-        <a href="#" class="insta">Instagram</a>
+        <a href="#" class="tw"><span class="reseaux1">Twitter</span><i class="fab fa-twitter"></i></a>
+        <a href="#" class="fb"><span class="reseaux2">Facebook</span><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="dbbb"><span class="reseaux3">Dribbble</span><i class="fab fa-dribbble"></i></a>
+        <a href="#" class="google"><span class="reseaux4">Google</span><i class="fab fa-google-plus-g"></i></a>
     </div>
 
 
