Je ne perds pas tout ce que j'ai fait

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             </div>
                             <div class="modal-body">
                                 <h4 class="text-center mt-3 mb-1 text-dark">Connectez vous sur votre compte</h4>
-                                <form class="form-group row mt-5 mx-5" action="">
+                                <form class="form-group row mt-1 mx-1" action="">
                                     <input class="col-12 form-control mt-2" type="text" placeholder="Identifiant">
                                     <input class="col-12 form-control mt-2" type="password" id="password" placeholder="Password">
                                     <input type="submit" class="mx-auto mt-4 btn btn-success" data-dismiss="modal" value="Ok">
@@ -214,7 +214,7 @@
                             </div>
                             <div class="modal-body">
                                 <h4 class="text-center mt-3 mb-1 text-dark">Register to AllezCine</h4>
-                                <form class="form-group row m-5" action="">
+                                <form class="form-group row m-1" action="">
                                     <input class="col-12 form-control mt-2" type="text" placeholder="usnerame">
                                     <input class="col-12 form-control mt-2" type="password" id="password" placeholder="Password">
                                     <input class="col-12 form-control mt-2" type="password" id="confirm-password" placeholder="Confirm password">
@@ -922,5 +922,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="assets/js/featured.js"></script>
     <script src="assets/js/contact.js"></script>
+    <script src="assets/js/cookie.js"></script>
 </body>
 </html>
