--- a/index.html
+++ b/index.html
@@ -228,6 +228,8 @@
         </div>
     </footer>
 
+    <script src="assets/js/entreesite.js"></script>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
