--- a/index.html
+++ b/index.html
@@ -791,6 +791,7 @@
                 <div class="col text-center">
                     <h2 class="suscribe">SUBSCRIBE TO US</h2>
                 </div>
+                
             </div>
             <div class="row d-flex justify-content-center inputsuscribe">
                 <div class="col-4">
@@ -925,6 +926,7 @@
     <script src="assets/js/featured.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/cookie.js"></script>
+    <script src="assets/js/boutonRetour.js"></script>
 </body>
 
 </html>
