Modification du header

--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class="collapse navbar-collapse navbar-decal" id="navbarTogglerDemo03">
-                <ul class="navbar-nav ml-5 mr-auto mt-2 mt-lg-0">
+            <div class="d-lg-none collapse navbar-collapse navbar-decal" id="navbarTogglerDemo03">
+                <ul class="navbar-nav ml-lg-5 mr-auto mt-2 mt-lg-0">
                     <li class="nav-item nav-block active">
                         <a class="adjust-padding btn text-danger mr-3">HOME</a>
                     </li>
                     <li class="nav-item nav-block">
                         <div class="dropdown">
-                            <button class="btn" id="genre" data-toggle="dropdown">Genre<i class="fas fa-caret-down"></i></button>
+                                <button class="btn" id="genre" data-toggle="dropdown">Genre<i class="fas fa-caret-down"></i></button>
                             <div class="dropdown-menu">
                                 <div class="dropdown-item">
                                     <a href="#">Action</a>
@@ -113,7 +113,7 @@
                     </li>
                 </ul>
 
-                <form class="form-inline input-group col-3">
+                <form class="form-inline input-group col-lg-3 col-md-4">
                     <input class="form-control i-search round-left space-left" type="search" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn i-search round-right" type="submit"><i class="fas fa-search"></i></button>
