boutons réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -234,10 +234,49 @@
                 </div>
             </div>
 </div> 
+
+<!--Boutons réseaux sociaux-->
+
+<aside class="bp-reseaux">
+        <a href="#">
+            <div class="bp-res twitter mb-1">
+                <p>Twitter</p>
+                <div class="cercle">
+                    <i class="fab fa-twitter"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bp-res facebook mb-1">
+                <p>Facebook</p>
+                <div class="cercle">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bp-res drible mb-1">
+                <p>Dribble</p>
+                <div class="cercle">
+                    <i class="fab fa-dribbble"></i>
+                </div>
+            </div>
+        </a>
+        <a href="#">
+            <div class="bp-res googleplus mb-1">
+                <p>Google+</p>
+                <div class="cercle">
+                    <i class="fab fa-google-plus-g"></i>
+                </div>
+            </div>
+        </a>
+    </aside>
     
     </header>
 
     <main>
+           
+
         <section class="container first">
         <h2 class="display_none">Derniers films</h2>
             <div class="container__center">
