--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                             </div>  
                     </div>
                 </div>
-            </div>        
+            </div>    
         </section>
         <section id="section_shop" class="container" >
             <!-- TEMPLATE SHOP MOVIE-->
@@ -942,7 +942,7 @@
                 <div class="col text-center">
                     <h2 class="connectus">CONNECT US</h2>
                 </div>
-                <a href="#haut" id="cRetour" class="cInvisible"><img src="https://i.goopics.net/1W12A.png"></a>
+                <a href="#haut" id="cRetour" class="cInvisible"><img src="https://i.goopics.net/1W12A.png" alt="image du bouton de retour vers le haut"></a>
             </div>
             <!-- Lisibilité  html-->
             <div class="row">
