--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             </button>
             
             <div class="collapse navbar-collapse navbar-decal" id="navbarTogglerDemo03">
-                <ul class="navbar-nav ml-5 mr-auto mt-2 mt-lg-0">
+                <ul class="navbar-nav ">
                     <li class="nav-item nav-block active">
-                        <a class="adjust-padding btn text-danger mr-3">HOME</a>
+                        <a class="adjust-padding bg-light btn text-danger mr-3">HOME</a>
                     </li>
                     <li class="nav-item nav-block">
                         <div class="dropdown">
@@ -108,12 +108,12 @@
                             </div>
                         </div>
                     </li>
-                    <li>
+                    <li class="contact-li">
                         <a class="nav-link nav-contact adjust-padding" href="#">CONTACT</a>
                     </li>
                 </ul>
 
-                <form class="form-inline input-group col-3">
+                <form class="form-inline search-bar input-group col-md-12">
                     <input class="form-control i-search round-left space-left" type="search" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn i-search round-right" type="submit"><i class="fas fa-search"></i></button>
