--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="collapse navbar-collapse navbar-decal" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ">
                     <li class="nav-item nav-block active">
-                        <a class="adjust-padding bg-light btn text-danger mr-3">HOME</a>
+                        <a class="adjust-padding btn text-danger mr-3">HOME</a>
                     </li>
                     <li class="nav-item nav-block">
                         <div class="dropdown">
@@ -113,7 +113,7 @@
                     </li>
                 </ul>
 
-                <form class="form-inline search-bar input-group col-md-12">
+                <form class="form-inline search-bar input-group col-lg-4 col-xl-3 ml-auto">
                     <input class="form-control i-search round-left space-left" type="search" placeholder="Search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn i-search round-right" type="submit"><i class="fas fa-search"></i></button>
