--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             
-            <div class="collapse navbar-collapse navbar-decal" id="navbarTogglerDemo03">
+            <div class="collapse navbar-font navbar-collapse navbar-decal" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ">
                     <li class="nav-item nav-block active">
                         <a class="adjust-padding btn text-danger mr-3">HOME</a>
