modif texte série

--- a/newsletter.html
+++ b/newsletter.html
@@ -74,16 +74,16 @@
                     <tbody>
                         <tr style="background-image: url(https://helpx.adobe.com/content/dam/help/en/stock/how-to/visual-reverse-image-search/jcr_content/main-pars/image/visual-reverse-image-search-v2_intro.jpg)">
                             <td style="text-align: center;"> 
-                                <p style="color:#ff4140; font-size:15px;font-weight: bolder;"> Ajout Episode 16 Saison 9</p>
+                                <p style="color:#ff4140; font-size:15px;font-weight: bolder;">Episode 16 Saison 9</p>
                             </td>
                             <td style="text-align: center;">
-                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 12 Saison 16</p>
+                                <p style="color:#ff4140; font-weight: bolder;">Episode 12 Saison 16</p>
                             </td>
                             <td style="text-align: center;">
-                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 15 Saison 3</p>
+                                <p style="color:#ff4140; font-weight: bolder;">Episode 15 Saison 3</p>
                             </td>
                             <td style="text-align: center;">
-                                <p style="color:#ff4140; font-weight: bolder;"> Ajout Episode 25 Saison 15</p>
+                                <p style="color:#ff4140; font-weight: bolder;">Episode 25 Saison 15</p>
                             </td>
                         </tr>
                     </tbody>
