--- a/newsletterOfficiel.html
+++ b/newsletterOfficiel.html
@@ -403,17 +403,17 @@
     <table>
         <tbody>
             <tr>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"><strong>Ajout Episode 16 Saison 9</strong></p>
+                <td style="text-align: center;padding-left:35px;">
+                    <p style="color:#737373;"><strong>Episode 16</br> Saison 9</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"><strong>Ajout Episode 12 Saison 16</strong></p>
+                <td style="text-align: center;padding-left:70px; padding-right:10px;">
+                    <p style="color:#737373;"><strong>Episode 12 </br> Saison 16</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"><strong>Ajout Episode 15 Saison 3</strong></p>
+                <td style="text-align: center;padding-left:60px; padding-right:20px;">
+                    <p style="color:#737373;"><strong>Episode 15 </br> Saison 3</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373; "><strong>Ajout Episode 25 Saison 15</strong></p>
+                <td style="text-align: center;padding-left:60px; padding-right:20px;">
+                    <p style="color:#737373; "><strong>Episode 25 </br> Saison 15</strong></p>
                 </td>
             </tr>
         </tbody>
