--- a/newsletter.html
+++ b/newsletter.html
@@ -326,7 +326,7 @@
         <!--section films-->
         <tr>
             <h2
-                style="background-image:url(https://i.goopics.net/kjJJe.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 2em;letter-spacing: 2px; color: red;"></h2>
+                style="background-image:url(https://i.goopics.net/WbOow.jpg);background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; font-size: 2em;letter-spacing: 2px; color: red;"></h2>
 
         </tr>
         <tr>
@@ -355,7 +355,7 @@
                 </td>
                 <td style="text-align: center;">
 
-                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2018</strong></p>
+                    <p style="color:#737373; font-weight: bolder;"> <strong>Nouveauté exclus 2017</strong></p>
 
                 </td>
                 <td style="text-align: center;">
@@ -378,7 +378,7 @@
             <tr>
                 <td>
                     <h2
-                        style="background-image:url(https://i.goopics.net/ZY11l.jpg); font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 4%; text-align:center; color: #ff4140 ;font-size: 1.8em;"></h2>
+                        style="background-image:url(https://i.goopics.net/yOEWV.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center;"></h2>
                 </td>
             </tr>
             <tr>
@@ -402,17 +402,17 @@
     <table>
         <tbody>
             <tr>
-                <td style="text-align: center;"> 
-                    <p style="color:#737373;"> <strong>Ajout Episode 16 Saison 9</strong></p>
+                <td style="text-align: center; padding-left: 20px; "> 
+                    <p style="color:#737373;"> <strong>Episode 16 - </br> Saison 9</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"> <strong>Ajout Episode 12 Saison 16</strong></p>
+                <td style="text-align: center; padding-left: 20px; padding-right: 10px">
+                    <p style="color:#737373;"> <strong>Episode 12 - </br> Saison 16</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"> <strong>Ajout Episode 15 Saison 3</strong></p>
+                <td style="text-align: center; padding-left: 20px; padding-right: 10px">
+                    <p style="color:#737373;"> <strong>Episode 15 - </br> Saison 3</strong></p>
                 </td>
-                <td style="text-align: center;">
-                    <p style="color:#737373;"> <strong>Ajout Episode 25 Saison 15</strong></p>
+                <td style="text-align: center; padding-left: 20px; padding-right: 10px">
+                    <p style="color:#737373;"> <strong>Episode 25 - </br> Saison 15</strong></p>
                 </td>
             </tr>
         </tbody>
@@ -436,7 +436,7 @@
         <tr>
         <tr>
             <h2
-            style="background-image:url(https://i.goopics.net/rK2X0.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center; color:white;font-size: 1.8em;"></h2>
+            style="background-image:url(https://i.goopics.net/Yv0O2.jpg); background-size: cover; font-family:Arial; width:600px; height:50px; margin:auto; padding-top: 2%; text-align:center;"></h2>
         </tr>
         </tr>
         <tr>
