--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             <img alt="le patient anglais" class="card-img-top" src="https://raw.githubusercontent.com/CorentinDeblock/frontend-AllezCine/img-data/lepatientanglais-1996-dramatique.jpg">
                         </a>
                         <div class="movies__contenu">
-                            <a class="btn btn-primary btn-hover" data-toggle="modal" data-target="#recent1">
+                            <a class="btn btn-hover" data-toggle="modal" data-target="#recent1">
                                 <p class="card__name title">Le patient anglais</p>
                             </a>
                                 <div class="grid">
