--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                 </div>
             </div>
             <!-- Lisibilité  html-->
-            <div class=" tableau row">
+            <div class=" tableau row mx-auto">
 
                 <div class="col-12 col-sm-6 col-md-4 col-lg">
                     <h4>RELEASES</h4>
